Update NN from scratch.ipynb

--- a/NN from scratch.ipynb
+++ b/NN from scratch.ipynb
@@ -694,7 +694,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5 - Update Parameters\n",
+    "## 5. Update Parameters\n",
     "\n",
     "In this section you will update the parameters of the model, using gradient descent: \n",
     "\n",
